@@ -749,6 +749,10 @@ header for this session \\
 
 \hline
 
+\texttt{SECURE\_COOKIE} & Set the "secure" flag on the session cookie. \\
+
+\hline
+
 \texttt{JAILCGI} & enable JailCGI \\
 
 \hline
