@@ -64,6 +64,7 @@ TRANSLATE_AUTHENTICATION_INFO = 57
 TRANSLATE_AUTHORIZATION = 58
 TRANSLATE_HEADER = 59
 TRANSLATE_UNTRUSTED_PREFIX = 60
+TRANSLATE_SECURE_COOKIE = 61
 
 HEADER_FORWARD_NO = 0
 HEADER_FORWARD_YES = 1
