@@ -2,6 +2,7 @@ cm4all-beng-proxy (0.7.38) unstable; urgency=low
 
   * http-server: send HTTP/1.1 declaration with "100 Continue"
   * connection: initialize "site_name", fixes crash bug
+  * translation: added packet SECURE_COOKIE
 
  --
 
